--- a/html/default/en/default.css
+++ b/html/default/en/default.css
@@ -49,7 +49,7 @@ h1, h2, h3, h4 {
   max-width: 700px;
 }
 #meta {
-  width: 29%; 
+  width: 29%;
   float: left;
   max-width: 300px;
 }
@@ -66,6 +66,7 @@ h1, h2, h3, h4 {
 .comment img, .action img, .person img {
   margin-left: -38px;
   max-width: 32px;
+  max-height: 32px;
   float: left;
   opacity: 2.0;
 }
@@ -81,15 +82,18 @@ h1, h2, h3, h4 {
 .person .name {
   display: block;
 }
-.join, .part {
+.join, .part, .nick {
   display: inline-block;
+  font-size: 0.8em;
   border: 1px solid #77f;
   padding: 2px 4px;
   margin: 2px;
   min-height: 16px;
   opacity: 0.6;
 }
-.join img, .join .time, .part img, .part .time {
+.join img, .join .time,
+.nick img, .nick .time,
+.part img, .part .time {
   display: none;
 }
 .part {
