--- a/html/default/en/default.css
+++ b/html/default/en/default.css
@@ -105,7 +105,7 @@ h1, h2, h3, h4 {
   text-decoration: line-through;
   opacity: 0.4;
 }
-.topic {
+.topic, .topic a {
   font-size: 15px;
   text-align: center;
   font-weight: bold;
