--- a/html/default/en/default.css
+++ b/html/default/en/default.css
@@ -27,7 +27,7 @@ h1, h2, h3, h4 {
   text-align: center;
   background: #ff0;
   color: #000;
-  display: none;
+  display: hidden;
 }
 #countdown {
   font-weight: bold;
