--- a/html/default/en/default.css
+++ b/html/default/en/default.css
@@ -27,11 +27,16 @@ h1, h2, h3, h4 {
   text-align: center;
   background: #ff0;
   color: #000;
-  display: hidden;
+  display: none;
 }
 #countdown {
   font-weight: bold;
   color: #070;
+}
+#debug_log p {
+  font-size: 9px;
+  margin: 1px 10px;
+  padding: 0;
 }
 
 #channel, #input, #people, #me {
@@ -99,6 +104,9 @@ h1, h2, h3, h4 {
   float: right;
   margin: 0 0 10px 10px;
   font-size: 0.8em;
+}
+.person {
+  overflow: hidden;
 }
 .person .name {
   display: block;
