--- a/html/default/en/default.css
+++ b/html/default/en/default.css
@@ -139,3 +139,11 @@ h1, h2, h3, h4 {
   font-size: 13px;
   color: #aaa;
 }
+
+.channel_list .network {
+  font-weight: bold;
+}
+.channel_list .network ul {
+  margin-bottom: 10px;
+  font-weight: normal;
+}
