--- a/html/default/en/default.css
+++ b/html/default/en/default.css
@@ -84,6 +84,11 @@ h1, h2, h3, h4 {
 #pleaselogin, #loginpending {
   text-align: center;
 }
+.disclaimer {
+  margin: 0 50px;
+  text-align: left;
+  font-size: 10px;
+}
 #logout {
   float: right;
 }
