--- a/html/default/en/default.css
+++ b/html/default/en/default.css
@@ -135,16 +135,14 @@ span.wrap {
   font-weight: bold;
   margin: 0 2px 0 0;
 }
-.comment .time, .action .time {
+.comment .time, .comment-more .time, .action .time {
+  color: #666;
   float: right;
-  margin: 0 0 10px 10px;
-  font-size: 0.8em;
+  margin: 0 0 0 10px;
+  font-size: 10px;
 }
 .comment-more {
   display: block;
-}
-.comment-more .name {
-  opacity: 0;
 }
 .person {
   overflow: hidden;
